@@ -9,7 +9,10 @@ Revision history for {{$dist->name}}
     [New features]
     - Thanks to Syntax::Keyword::Equ, match() now supports `equ` as an operator
     - RPC on start handle existing pending messages in stream, if not expired.
-    - RPC overflow protection (will not connsume more than it can process)
+    - RPC overflow protection (will not connsume more than it can process).
+
+    [Bugs fixed]
+    - Subscriptions to create streams from source without a published event.
 
     [Dependencies]
     - Object::Pad - updated to v0.55 for various bugfixes and improvements
